Add keystoneauth1 as build requirement for python-magnumclient
It was pulled in as a transitive requirement before.

Change-Id: Iab191ba1bc7d2168d2d602d1f71e649820ebb5af

--- a/openstack/python-magnumclient/python-magnumclient.spec.j2
+++ b/openstack/python-magnumclient/python-magnumclient.spec.j2
@@ -10,6 +10,7 @@ BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PrettyTable') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
+BuildRequires:  {{ py2pkg('keystoneauth1') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('oslo.i18n') }}
 BuildRequires:  {{ py2pkg('oslo.serialization') }}
