--- a/openstack/osprofiler/osprofiler.spec.j2
+++ b/openstack/osprofiler/osprofiler.spec.j2
@@ -1,6 +1,6 @@
 %global sname osprofiler
 Name:           {{ py2name('osprofiler') }}
-Version:        1.3.0
+Version:        1.4.0
 Release:        0
 Summary:        OpenStack Profiler Library
 License:        {{ license('Apache-2.0') }}
@@ -9,10 +9,12 @@ Url:            https://launchpad.net/osprofiler
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('WebOb') }}
+BuildRequires:  {{ py2pkg('python-ceilometerclient') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('oslo.config') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
+BuildRequires:  {{ py2pkg('pymongo') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
 BuildRequires:  {{ py2pkg('six') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
