--- a/openstack/python-designateclient/python-designateclient.spec.j2
+++ b/openstack/python-designateclient/python-designateclient.spec.j2
@@ -20,9 +20,10 @@ BuildRequires:  {{ py2pkg('testrepository') }}
 Requires:       {{ py2pkg('cliff') }}
 Requires:       {{ py2pkg('debtcollector') }}
 Requires:       {{ py2pkg('jsonschema') }}
+Requires:       {{ py2pkg('keystoneauth1') }}
 Requires:       {{ py2pkg('python-keystoneclient') }}
+Requires:       {{ py2pkg('osc-lib') }}
 Requires:       {{ py2pkg('oslo.utils') }}
-Requires:       {{ py2pkg('pbr') }}
 Requires:       {{ py2pkg('requests') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('stevedore') }}
