Update oslo.context to version 2.9.0
- Add positional as Requires and BuildRequires

Change-Id: I38c3fb0b8e4d982ae2e93ecc1933d857b23b14bf

--- a/openstack/oslo.context/oslo.context.spec.j2
+++ b/openstack/oslo.context/oslo.context.spec.j2
@@ -10,6 +10,8 @@ Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('pbr') }}
+BuildRequires: {{ py2pkg('positional') }}
+Requires:      {{ py2pkg('positional') }}
 BuildArch:      noarch
 %if %{with test}
 BuildRequires:  {{ py2pkg('oslotest') }}
