--- a/openstack/os-brick/os-brick.spec.j2
+++ b/openstack/os-brick/os-brick.spec.j2
@@ -1,6 +1,6 @@
 %global sname os-brick
 Name:           {{ py2name('os-brick') }}
-Version:        1.5.0
+Version:        1.6.0
 Release:        0
 Summary:        OpenStack Cinder brick library for managing local volume attaches
 License:        {{ license('Apache-2.0') }}
@@ -22,6 +22,7 @@ BuildRequires:  {{ py2pkg('oslo.privsep') }}
 BuildRequires:  {{ py2pkg('oslo.serialization') }}
 BuildRequires:  {{ py2pkg('oslo.service') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
+BuildRequires:  {{ py2pkg('oslo.vmware') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
