Add missing epoch to python-novaclient
Change-Id: Icbe7dc1ecab73fad2808cfe86fc2ed6dda01de95

--- a/openstack/python-novaclient/python-novaclient.spec.j2
+++ b/openstack/python-novaclient/python-novaclient.spec.j2
@@ -1,4 +1,5 @@
 Name:             python-novaclient
+Epoch:            {{ epoch('python-novaclient') }}
 Version:          5.1.0
 Release:          0
 Summary:          Python API and CLI for OpenStack Nova
