--- a/openstack/oslo.vmware/oslo.vmware.spec.j2
+++ b/openstack/oslo.vmware/oslo.vmware.spec.j2
@@ -1,6 +1,6 @@
 %global pypi_name oslo.vmware
 Name:           {{ py2name('oslo.vmware') }}
-Version:        2.12.0
+Version:        2.14.0
 Release:        0
 Summary:        Oslo VMware library for OpenStack projects
 License:        {{ license('Apache-2.0') }}
@@ -15,6 +15,8 @@ BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('lxml') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('mox3') }}
+BuildRequires:  {{ py2pkg('netaddr') }}
+BuildRequires:  {{ py2pkg('oslo.concurrency') }}
 BuildRequires:  {{ py2pkg('oslo.i18n') }}
 BuildRequires:  {{ py2pkg('oslo.utils') }}
 BuildRequires:  {{ py2pkg('pbr') }}
@@ -25,12 +27,13 @@ BuildRequires:  {{ py2pkg('testrepository') }}
 BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 BuildRequires:  {{ py2pkg('urllib3') }}
-Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('eventlet') }}
-Requires:       {{ py2pkg('iso8601') }}
 Requires:       {{ py2pkg('lxml') }}
 Requires:       {{ py2pkg('netaddr') }}
+Requires:       {{ py2pkg('oslo.concurrency') }}
+Requires:       {{ py2pkg('oslo.i18n') }}
+Requires:       {{ py2pkg('oslo.utils') }}
 Requires:       {{ py2pkg('requests') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('stevedore') }}
@@ -46,16 +49,11 @@ high quality, stable, consistent and generally useful.
 The Oslo VMware library offers session and API call management for VMware ESX/VC
 server.
 
-%package    doc
-Summary:    Documentation for OpenStack common VMware library
-BuildRequires: {{ py2pkg('Sphinx') }}
-BuildRequires: {{ py2pkg('netaddr') }}
-BuildRequires: {{ py2pkg('oslo.concurrency') }}
-BuildRequires: {{ py2pkg('oslo.i18n') }}
-BuildRequires: {{ py2pkg('oslosphinx') }}
-BuildRequires: {{ py2pkg('requests') }}
-BuildRequires: {{ py2pkg('suds-jurko') }}
-Requires:      %{name} = %{version}
+%package        doc
+Summary:        Documentation for OpenStack common VMware library
+BuildRequires:  {{ py2pkg('Sphinx') }}
+BuildRequires:  {{ py2pkg('oslosphinx') }}
+Requires:       %{name} = %{version}
 
 %description doc
 Documentation for OpenStack common VMware library.
