--- a/openstack/python-novaclient/python-novaclient.spec.j2
+++ b/openstack/python-novaclient/python-novaclient.spec.j2
@@ -1,6 +1,6 @@
 Name:           python-novaclient
 Epoch:          {{ epoch('python-novaclient') }}
-Version:        5.1.0
+Version:        6.0.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Nova
 License:        {{ license('Apache-2.0') }}
@@ -9,11 +9,13 @@ Url:             http:///launchpad.net/{name}
 Source0:        https://pypi.io/packages/source/p/%{name}/%{name}-%{version}.tar.gz
 BuildRequires:  openssl
 BuildRequires:  openstack-macros
-BuildRequires:  {{ py2pkg('cinderclient') }}
+BuildRequires:  {{ py2pkg('Tempest') }}
+BuildRequires:  {{ py2pkg('python-cinderclient') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
+BuildRequires:  {{ py2pkg('python-glanceclient') }}
 BuildRequires:  {{ py2pkg('keyring') }}
-BuildRequires:  {{ py2pkg('keystoneclient') }}
+BuildRequires:  {{ py2pkg('python-keystoneclient') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('os-client-config') }}
 BuildRequires:  {{ py2pkg('pbr') }}
@@ -26,9 +28,7 @@ Requires:       openssl
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('PrettyTable') }}
 Requires:       {{ py2pkg('iso8601') }}
-Requires:       {{ py2pkg('keyring') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
-Requires:       {{ py2pkg('keystoneclient') }}
 Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.serialization') }}
 Requires:       {{ py2pkg('oslo.utils') }}
@@ -49,6 +49,7 @@ Summary:        Documentation for OpenStack Nova API Client
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('reno') }}
 
 %description      doc
 This is a client for the OpenStack Nova API. There's a Python API (the
