Add missing group to python-barbicanclient
Change-Id: Iea6172cf666133bd199fa4ec57a5a2babeb48c1d

--- a/openstack/python-barbicanclient/python-barbicanclient.spec.j2
+++ b/openstack/python-barbicanclient/python-barbicanclient.spec.j2
@@ -4,6 +4,7 @@ Version:        4.1.0
 Release:        0
 Summary:        Client for the Barbican Key Management API
 License:        {{ license('Apache-2.0') }}
+Group:          Development/Languages/Python
 Url:            http://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
