Update openstackdocstheme to 1.5.0
Depends-On: I65e096b61f7e8bf87084a78140636a2f02b5a8e4
Change-Id: Ic73b4c4708e71f743b068004438a74444ba35515

--- a/openstack/openstackdocstheme/openstackdocstheme.spec.j2
+++ b/openstack/openstackdocstheme/openstackdocstheme.spec.j2
@@ -1,6 +1,6 @@
 %global sname openstackdocstheme
 Name:           {{ py2name('openstackdocstheme') }}
-Version:        1.4.0
+Version:        1.5.0
 Release:        0
 Summary:        OpenStack Docs Theme
 License:        {{ license('Apache-2.0') }}
@@ -10,6 +10,7 @@ Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.t
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('devel') }}
+BuildRequires:  {{ py2pkg('os-api-ref') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('requests') }}
