python-novaclient: Remove Tempest BuildRequires
It's only needed for functional tests which we don't execute during build.

Change-Id: I94f661ece2f56ea069aa21df609db658f8335f44

--- a/openstack/python-novaclient/python-novaclient.spec.j2
+++ b/openstack/python-novaclient/python-novaclient.spec.j2
@@ -9,7 +9,6 @@ Url:             http:///launchpad.net/{name}
 Source0:        https://pypi.io/packages/source/p/%{name}/%{name}-%{version}.tar.gz
 BuildRequires:  openssl
 BuildRequires:  openstack-macros
-BuildRequires:  {{ py2pkg('Tempest') }}
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
@@ -72,7 +71,7 @@ This package contains auto-generated documentation.
 rm -fr html/.doctrees html/.buildinfo
 
 %check
-%{__python2} setup.py testr
+OS_TEST_PATH=novaclient/tests/unit %{__python2} setup.py testr
 
 %files
 %doc README.rst
