python-openstackclient: Remove BuildRequires for doc build
Having the other python-*client packages as BuildRequires for the
documentation creates build cycles.
We need to find a better solution for that but for now removing the
BuildRequires which are only for documentation needed is fine.

Change-Id: I1d7e8cd293b984694f941b1819d581cd3259726b

--- a/openstack/python-openstackclient/python-openstackclient.spec.j2
+++ b/openstack/python-openstackclient/python-openstackclient.spec.j2
@@ -54,13 +54,13 @@ Group:          Documentation
 # TODO(jpena): uncomment them to enable their sections in the documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
 #BuildRequires:  {{ py2pkg('aodhclient') }}
-BuildRequires:  {{ py2pkg('python-barbicanclient') }}
-BuildRequires:  {{ py2pkg('python-congressclient') }}
-BuildRequires:  {{ py2pkg('python-designateclient') }}
-BuildRequires:  {{ py2pkg('python-heatclient') }}
+#BuildRequires:  {{ py2pkg('python-barbicanclient') }}
+#BuildRequires:  {{ py2pkg('python-congressclient') }}
+#BuildRequires:  {{ py2pkg('python-designateclient') }}
+#BuildRequires:  {{ py2pkg('python-heatclient') }}
 #BuildRequires:  {{ py2pkg('python-ironicclient') }}
 #BuildRequires:  {{ py2pkg('python-mistralclient') }}
-BuildRequires:  {{ py2pkg('python-muranoclient') }}
+#BuildRequires:  {{ py2pkg('python-muranoclient') }}
 #BuildRequires:  {{ py2pkg('python-neutronclient') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 #BuildRequires:  {{ py2pkg('python-ironic-inspector-client') }}
