* Fix -doc subpackage description for ironicclien * Because it's had the Cinder description
Change-Id: I250e88c00ab4874a70a1be11b41cb5a612780af7
Closes-Bug: #1625885

--- a/openstack/python-ironicclient/python-ironicclient.spec.j2
+++ b/openstack/python-ironicclient/python-ironicclient.spec.j2
@@ -57,9 +57,9 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('reno') }}
 
 %description doc
-This is a client for the OpenStack Cinder API (Block Storage. There's a
-Python API (the cinderclient module), and a command-line script (cinder).
-Each implements 100% of the OpenStack Cinder API.
+This is a client for the OpenStack Ironic API (Bare Metal. There's a
+Python API (the ironicclient module), and a command-line script (ironic).
+Each implements 100% of the OpenStack Ironic API.
 This package contains auto-generated documentation.
 
 %prep
