--- a/openstack/python-mistralclient/python-mistralclient.spec.j2
+++ b/openstack/python-mistralclient/python-mistralclient.spec.j2
@@ -1,5 +1,5 @@
 Name:           {{ py2name('python-mistralclient') }}
-Version:        2.0.0
+Version:        2.1.1
 Release:        0
 Summary:        Python API and CLI for OpenStack Mistral
 License:        {{ license('Apache-2.0') }}
@@ -13,6 +13,7 @@ BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('nose') }}
 BuildRequires:  {{ py2pkg('python-openstackclient') }}
+BuildRequires:  {{ py2pkg('osprofiler') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 BuildRequires:  {{ py2pkg('tempest-lib') }}
