Fix Group to Development/Languages/Python
Change-Id: I73d91f08aad4af39fa4cfba9ae54169bfe64e989

--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -5,7 +5,7 @@ Epoch:          {{ epoch('oslo.config') }}
 Release:        0
 Summary:        OpenStack common configuration library
 License:        {{ license('Apache-2.0') }}
-Group:          Development/Languages
+Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
