--- a/openstack/oslo.context/oslo.context.spec.j2
+++ b/openstack/oslo.context/oslo.context.spec.j2
@@ -5,7 +5,7 @@ Version:        2.9.0
 Release:        0
 Summary:        OpenStack Oslo context library
 License:        {{ license('Apache-2.0') }}
-Group:          Development/Languages
+Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
