Fix Group to Development/Languages/Python
Change-Id: I4bc82725189ea8c9a44bb4ea39e6d6bdafaa6885

--- a/openstack/oslo.serialization/oslo.serialization.spec.j2
+++ b/openstack/oslo.serialization/oslo.serialization.spec.j2
@@ -4,7 +4,7 @@ Version:        2.13.0
 Release:        0
 Summary:        OpenStack serialization library
 License:        {{ license('Apache-2.0') }}
-Group:          Development/Languages
+Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
