Fix Group to Development/Languages/Python
Change-Id: I4bc82725189ea8c9a44bb4ea39e6d6bdafaa6885
(cherry picked from commit cb1e56cfe5859860179f93099bfb2d330b579c2d)
(cherry picked from commit f647d08f431ab0c1a1fbf6854b57eb1e21e6c5de)
(cherry picked from commit 99051ad81f97b935c77da3e86e40835fe5014f45)
(cherry picked from commit 11cbf1a028709a2c206f001881eca46037e6390f)
(cherry picked from commit 1e23958c9d290ee320f570465d293cea7efae567)
(cherry picked from commit 837e9dfd9dcc6afca7e041844016e35fdecd6106)
(cherry picked from commit 250ebfb64e02a9946c3a2c8f9b280fd5bd839253)

--- a/openstack/python-designateclient/python-designateclient.spec.j2
+++ b/openstack/python-designateclient/python-designateclient.spec.j2
@@ -4,6 +4,7 @@ Version:        2.3.0
 Release:        0
 Summary:        OpenStack DNS as a Service - Client
 License:        {{ 'Apache-2.0' | license }}
+Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
