--- a/openstack/python-glanceclient/python-glanceclient.spec.j2
+++ b/openstack/python-glanceclient/python-glanceclient.spec.j2
@@ -5,7 +5,7 @@ Version:        2.5.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Glance
 License:        {{ license('Apache-2.0') }}
-Group:          Development/Languages
+Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
