--- a/openstack/python-ceilometerclient/python-ceilometerclient.spec.j2
+++ b/openstack/python-ceilometerclient/python-ceilometerclient.spec.j2
@@ -4,7 +4,7 @@ Version:        2.6.1
 Release:        0
 Summary:        Python API and CLI for OpenStack Ceilometer
 License:        {{ license('Apache-2.0') }}
-Group:          Development/Languages
+Group:          Development/Languages/Python
 Url:            https://github.com/openstack/%{name}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
