Fix launchpad Url
Change-Id: Icc55d0cb83fd1f3b619993e7f57a70d7d87373b5

--- a/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
+++ b/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
@@ -4,7 +4,7 @@ Release:         0
 Summary:         Oslo Versioned Objects library
 License:         {{ license('Apache-2.0') }}
 Group:           Development/Languages/Python
-Url:             http://launchpad.net/oslo
+Url:             http://launchpad.net/%{sname}
 Source0:         https://pypi.io/packages/source/o/oslo.versionedobjects/oslo.versionedobjects-%{version}.tar.gz
 BuildRequires:   openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
