--- a/openstack/mox3/mox3.spec.j2
+++ b/openstack/mox3/mox3.spec.j2
@@ -5,7 +5,7 @@ Release:        0
 Summary:        An unofficial port of the Google mox framework to Python 3
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-Url:            http://docs.openstack.org/developer/stevedore/
+Url:            http://bugs.launchpad.net/python-mox3
 Source0:        https://tarballs.openstack.org/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
