--- a/openstack/gnocchiclient/gnocchiclient.spec.j2
+++ b/openstack/gnocchiclient/gnocchiclient.spec.j2
@@ -5,7 +5,7 @@ Release:        0
 Summary:        Python API and CLI for OpenStack Gnocchi
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-Url:            https://github.com/openstack/%{name}
+Url:            https://github.com/openstack/python-gnocchiclient
 Source0:        https://pypi.io/packages/source/g/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
