Fix doc summary
doc Summary: Nova to Glance

Change-Id: Ic1cb33ca55df07d2d910d03b48e2918a8c620947

--- a/openstack/python-glanceclient/python-glanceclient.spec.j2
+++ b/openstack/python-glanceclient/python-glanceclient.spec.j2
@@ -40,7 +40,7 @@ glanceclient module), and a command-line script (glance). Each implements
 100% of the OpenStack Glance API.
 
 %package doc
-Summary:        Documentation for OpenStack Nova API Client
+Summary:        Documentation for OpenStack Glance API Client
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
