Fix doc Summary
Change-Id: Id9ac899375c4db2a100e0f375a837415f58eeb1d

--- a/openstack/os-win/os-win.spec.j2
+++ b/openstack/os-win/os-win.spec.j2
@@ -40,7 +40,7 @@ Library contains Windows / Hyper-V code commonly used in the OpenStack projects:
 nova, cinder, networking-hyperv.
 
 %package doc
-Summary:        Documentation for OpenStack Identity API Client
+Summary:        Documentation for OpenStack Windows/Hyper-V Library
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
