Fix doc Summary
Change-Id: I30740cbcd24ec76344f96a6b017f7519d03bad31
(cherry picked from commit b2b73876c29fdb443fda3e24015ef2bb24b67778)
(cherry picked from commit ca5b7f004ec0721104e7ddd6718ad72a0a5c6627)
(cherry picked from commit 378abe0efbe70b795c78717757b785b52e9e4714)
(cherry picked from commit b884bb505990729adc958e016d3aa88fdc9accc3)

--- a/openstack/oslo.context/oslo.context.spec.j2
+++ b/openstack/oslo.context/oslo.context.spec.j2
@@ -24,7 +24,7 @@ The request context is usually populated in the WSGI pipeline and
 used by various modules such as logging.
 
 %package doc
-Summary:        Documentation for OpenStack common configuration library
+Summary:        Documentation for OpenStack common context library
 Group:          Documentation
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
