Try alternative way of blacklisting tests on 32bit platforms
The issue here is that  %ifarch/%ifnoarch do not compare against
the host arch but the build arch, and that is "noarch". We need
to use a slightly different test.

Change-Id: I02c9f4d4bcaf9cb6446e7e7750741ab18c61b94c
(cherry picked from commit 83a43beb7c894060821b2080e2eb118a60da7ba4)

--- a/openstack/oslo.concurrency/oslo.concurrency.spec.j2
+++ b/openstack/oslo.concurrency/oslo.concurrency.spec.j2
@@ -65,9 +65,10 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %check
 # Test suite fails on 32 bit platforms
-%ifnarch %arm %ix86 s390 ppc
+# ifarch/ifnarch can not be used in noarch packages
+if [ "%_lib" = "lib64" ]; then
 %{__python2} setup.py testr
-%endif
+fi
 
 %files
 %license LICENSE
